syntax = "proto3";

option java_multiple_files = true;

package mnm.sep3;

option csharp_namespace = "GrpcClient";

import "dtos.proto";

message GetQuizRequest {
  int32 quizId = 1;
}
message GetQuizResponse{
  QuizDTO quiz = 1;
}
message AddQuizRequest{
  string title = 1;
  int32 creatorId = 2;
}
message AddQuizResponse{
  string title = 1;
  int32 creatorId = 2;
}
message UpdateQuizRequest{
  QuizDTO quiz = 1;
}

message DeleteQuizRequest{
  int32 quizId = 1;
}


service QuizzesService {
  rpc GetQuiz (GetQuizRequest) returns (GetQuizResponse);
  rpc AddQuiz (AddQuizRequest) returns (AddQuizResponse);
  rpc UpdateQuiz (UpdateQuizRequest) returns (Empty);
  rpc DeleteQuiz (DeleteQuizRequest) returns (Empty);
}