syntax = "proto3";

option java_multiple_files = true;

package mnm.sep3;

option csharp_namespace = "GrpcClient";

message Empty {

}

message UserInfoDTO {
  string username = 1;
  int32 id = 2;
}

message UserDTO {
  string username = 1;
  string password = 2;
  int32 id = 3;
}

message QuizDTO {
  int32 id = 1;
  string title = 2;
  int32 creatorId = 3;
  UserInfoDTO creator = 4;
  string visibility = 5;
  int32 questionCount = 6;
}

message QuestionDTO {
  int32 id = 1;
  string title = 2;
  int32 index = 3;
  int32 quizId = 4;
}

message AnswerDTO {
  int32 id = 1;
  string title = 2;
  int32 index = 3;
  int32 questionId = 4; // Evt lav en repeated AnswerDTO variable p√• question i stedet for
  bool isCorrect = 5;
}

message GameDTO {
  string id = 1;
  int32 hostId = 2;
  int64 playedTime = 3;
  int32 quizId = 4;
}

message ParticipantDTO {
  string gameId = 1;
  int32 id = 2;
  string name = 3;
  int32 score = 4;
}

message ParticipantAnswerDTO {
  int32 id = 1;
  int32 answer = 2;
  int32 participantId = 3;
}